@@ -16,23 +16,12 @@
  */
 package org.apache.nifi.processors.aws.s3;
 
-import com.amazonaws.ClientConfiguration;
-import com.amazonaws.SdkClientException;
-import com.amazonaws.auth.AWSCredentialsProvider;
-import com.amazonaws.client.builder.AwsClientBuilder;
-import com.amazonaws.regions.Region;
-import com.amazonaws.services.s3.AmazonS3Client;
-import com.amazonaws.services.s3.model.AmazonS3Exception;
-import com.amazonaws.services.s3.model.GetObjectRequest;
-import com.amazonaws.services.s3.model.ObjectMetadata;
-import com.amazonaws.services.s3.model.S3Object;
-import com.amazonaws.util.StringInputStream;
 import org.apache.nifi.components.ConfigVerificationResult;
 import org.apache.nifi.flowfile.attributes.CoreAttributes;
 import org.apache.nifi.processor.ProcessContext;
 import org.apache.nifi.processor.exception.FlowFileAccessException;
+import org.apache.nifi.processors.aws.region.RegionUtil;
 import org.apache.nifi.processors.aws.testutil.AuthUtils;
-import org.apache.nifi.processors.aws.util.RegionUtilV1;
 import org.apache.nifi.util.MockFlowFile;
 import org.apache.nifi.util.PropertyMigrationResult;
 import org.apache.nifi.util.TestRunner;
@@ -41,21 +30,36 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.ArgumentCaptor;
 import org.mockito.Mockito;
+import software.amazon.awssdk.awscore.exception.AwsErrorDetails;
+import software.amazon.awssdk.awscore.exception.AwsServiceException;
+import software.amazon.awssdk.core.ResponseInputStream;
+import software.amazon.awssdk.core.exception.SdkClientException;
+import software.amazon.awssdk.http.AbortableInputStream;
+import software.amazon.awssdk.http.SdkHttpResponse;
+import software.amazon.awssdk.regions.Region;
+import software.amazon.awssdk.services.s3.S3Client;
+import software.amazon.awssdk.services.s3.S3Utilities;
+import software.amazon.awssdk.services.s3.model.GetObjectRequest;
+import software.amazon.awssdk.services.s3.model.GetObjectResponse;
+import software.amazon.awssdk.services.s3.model.HeadObjectRequest;
+import software.amazon.awssdk.services.s3.model.HeadObjectResponse;
+import software.amazon.awssdk.services.s3.model.RequestPayer;
+import software.amazon.awssdk.services.s3.model.S3Exception;
+import software.amazon.awssdk.services.s3.model.ServerSideEncryption;
+import software.amazon.awssdk.utils.StringInputStream;
 
-import java.io.IOException;
 import java.net.HttpURLConnection;
-import java.util.Collections;
-import java.util.Date;
+import java.time.Instant;
+import java.time.ZoneOffset;
+import java.time.ZonedDateTime;
+import java.time.format.DateTimeFormatter;
+import java.time.temporal.ChronoUnit;
 import java.util.HashMap;
-import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNull;
-import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
@@ -64,15 +68,20 @@ public class TestFetchS3Object {
 
     private TestRunner runner = null;
     private FetchS3Object mockFetchS3Object = null;
-    private AmazonS3Client mockS3Client = null;
+    private S3Client mockS3Client = null;
 
     @BeforeEach
     public void setUp() {
-        mockS3Client = mock(AmazonS3Client.class);
+        mockS3Client = mock(S3Client.class);
+        Mockito.when(mockS3Client.utilities()).thenReturn(S3Utilities.builder().region(Region.US_WEST_2).build());
         mockFetchS3Object = new FetchS3Object() {
             @Override
-            protected AmazonS3Client createClient(final ProcessContext context, final AWSCredentialsProvider credentialsProvider, final Region region, final ClientConfiguration config,
-                                                  final AwsClientBuilder.EndpointConfiguration endpointConfiguration) {
+            protected S3Client getClient(final ProcessContext context, final Map<String, String> attributes) {
+                return mockS3Client;
+            }
+
+            @Override
+            protected S3Client createClient(final ProcessContext context, final Map<String, String> attributes) {
                 return mockS3Client;
             }
         };
@@ -81,38 +90,34 @@ public class TestFetchS3Object {
     }
 
     @Test
-    public void testGetObject() throws IOException {
-        runner.setProperty(RegionUtilV1.S3_REGION, "attribute-defined-region");
-        runner.setProperty(FetchS3Object.BUCKET_WITHOUT_DEFAULT_VALUE, "request-bucket");
+    public void testGetObject() {
+        runner.setProperty(RegionUtil.REGION, "use-custom-region");
+        runner.setProperty(RegionUtil.CUSTOM_REGION, "${s3.region}");
+        runner.setProperty(FetchS3Object.BUCKET_WITHOUT_DEFAULT_VALUE, "test-bucket");
         final Map<String, String> attrs = new HashMap<>();
-        attrs.put("filename", "request-key");
+        attrs.put("filename", "test-key");
         attrs.put("s3.region", "us-west-2");
         runner.enqueue(new byte[0], attrs);
 
-        S3Object s3ObjectResponse = new S3Object();
-        s3ObjectResponse.setBucketName("response-bucket-name");
-        s3ObjectResponse.setKey("response-key");
-        s3ObjectResponse.setObjectContent(new StringInputStream("Some Content"));
-        ObjectMetadata metadata = Mockito.spy(ObjectMetadata.class);
-        metadata.setContentDisposition("key/path/to/file.txt");
-        metadata.setContentType("text/plain");
-        metadata.setContentMD5("testMD5hash");
-        Date expiration = new Date();
-        metadata.setExpirationTime(expiration);
-        metadata.setExpirationTimeRuleId("testExpirationRuleId");
-        Map<String, String> userMetadata = new HashMap<>();
-        userMetadata.put("userKey1", "userValue1");
-        userMetadata.put("userKey2", "userValue2");
-        metadata.setUserMetadata(userMetadata);
-        metadata.setSSEAlgorithm("testAlgorithm");
-        when(metadata.getETag()).thenReturn("test-etag");
-        s3ObjectResponse.setObjectMetadata(metadata);
-        when(mockS3Client.getObject(Mockito.any())).thenReturn(s3ObjectResponse);
+        Instant expirationTime = Instant.now().truncatedTo(ChronoUnit.SECONDS);
+        String expirationTimeRfc1123 = DateTimeFormatter.RFC_1123_DATE_TIME.format(ZonedDateTime.ofInstant(expirationTime, ZoneOffset.UTC));
 
-        final long mockSize = 20L;
-        final ObjectMetadata objectMetadata = mock(ObjectMetadata.class);
-        when(objectMetadata.getContentLength()).thenReturn(mockSize);
-        when(mockS3Client.getObjectMetadata(any())).thenReturn(objectMetadata);
+        GetObjectResponse response = GetObjectResponse.builder()
+                .eTag("test-etag")
+                .contentLength(12L)
+                .contentDisposition("key/path/to/file.txt")
+                .contentType("text/plain")
+                .checksumCRC32("testCRC32hash")
+                .expiration(String.format("expiry-date=\"%s\", rule-id=\"%s\"", expirationTimeRfc1123, "testExpirationRuleId"))
+                .serverSideEncryption(ServerSideEncryption.AES256)
+                .metadata(Map.of("userKey1", "userValue1", "userKey2", "userValue2"))
+                .build();
+
+        ResponseInputStream<GetObjectResponse> responseStream = new ResponseInputStream<>(response, AbortableInputStream.create(new StringInputStream("Some Content")));
+        when(mockS3Client.getObject(Mockito.any(GetObjectRequest.class))).thenReturn(responseStream);
+
+        HeadObjectResponse headResponse = HeadObjectResponse.builder().contentLength(12L).build();
+        when(mockS3Client.headObject(Mockito.any(HeadObjectRequest.class))).thenReturn(headResponse);
 
         runner.run(1);
 
@@ -123,136 +128,134 @@ public class TestFetchS3Object {
         ArgumentCaptor<GetObjectRequest> captureRequest = ArgumentCaptor.forClass(GetObjectRequest.class);
         Mockito.verify(mockS3Client, Mockito.times(1)).getObject(captureRequest.capture());
         GetObjectRequest request = captureRequest.getValue();
-        assertEquals("request-bucket", request.getBucketName());
-        assertEquals("request-key", request.getKey());
-        assertFalse(request.isRequesterPays());
-        assertNull(request.getVersionId());
+        assertEquals("test-bucket", request.bucket());
+        assertEquals("test-key", request.key());
+        assertNull(request.requestPayer());
+        assertNull(request.versionId());
 
         runner.assertAllFlowFilesTransferred(FetchS3Object.REL_SUCCESS, 1);
         final List<MockFlowFile> ffs = runner.getFlowFilesForRelationship(FetchS3Object.REL_SUCCESS);
         MockFlowFile ff = ffs.get(0);
-        ff.assertAttributeEquals("s3.bucket", "response-bucket-name");
+        ff.assertAttributeEquals("s3.bucket", "test-bucket");
         ff.assertAttributeEquals(CoreAttributes.FILENAME.key(), "file.txt");
         ff.assertAttributeEquals(CoreAttributes.PATH.key(), "key/path/to");
         ff.assertAttributeEquals(CoreAttributes.ABSOLUTE_PATH.key(), "key/path/to/file.txt");
         ff.assertAttributeEquals(CoreAttributes.MIME_TYPE.key(), "text/plain");
-        ff.assertAttributeEquals("hash.value", "testMD5hash");
-        ff.assertAttributeEquals("hash.algorithm", "MD5");
+        ff.assertAttributeEquals("hash.value", "testCRC32hash");
+        ff.assertAttributeEquals("hash.algorithm", "CRC32");
         ff.assertAttributeEquals("s3.etag", "test-etag");
-        ff.assertAttributeEquals("s3.expirationTime", String.valueOf(expiration.getTime()));
+        ff.assertAttributeEquals("s3.expirationTime", String.valueOf(expirationTime.toEpochMilli()));
         ff.assertAttributeEquals("s3.expirationTimeRuleId", "testExpirationRuleId");
         ff.assertAttributeEquals("userKey1", "userValue1");
         ff.assertAttributeEquals("userKey2", "userValue2");
-        ff.assertAttributeEquals("s3.sseAlgorithm", "testAlgorithm");
+        ff.assertAttributeEquals("s3.sseAlgorithm", "AES256");
         ff.assertContentEquals("Some Content");
     }
 
     @Test
-    public void testGetObjectWithRequesterPays() throws IOException {
-        runner.setProperty(RegionUtilV1.S3_REGION, "us-east-1");
-        runner.setProperty(FetchS3Object.BUCKET_WITHOUT_DEFAULT_VALUE, "request-bucket");
+    public void testGetObjectWithRequesterPays() {
+        runner.setProperty(RegionUtil.REGION, "us-east-1");
+        runner.setProperty(FetchS3Object.BUCKET_WITHOUT_DEFAULT_VALUE, "test-bucket");
         runner.setProperty(FetchS3Object.REQUESTER_PAYS, "true");
         final Map<String, String> attrs = new HashMap<>();
-        attrs.put("filename", "request-key");
+        attrs.put("filename", "test-key");
         runner.enqueue(new byte[0], attrs);
 
-        S3Object s3ObjectResponse = new S3Object();
-        s3ObjectResponse.setBucketName("response-bucket-name");
-        s3ObjectResponse.setKey("response-key");
-        s3ObjectResponse.setObjectContent(new StringInputStream("Some Content"));
-        ObjectMetadata metadata = Mockito.spy(ObjectMetadata.class);
-        metadata.setContentDisposition("key/path/to/file.txt");
-        metadata.setContentType("text/plain");
-        metadata.setContentMD5("testMD5hash");
-        Date expiration = new Date();
-        metadata.setExpirationTime(expiration);
-        metadata.setExpirationTimeRuleId("testExpirationRuleId");
-        Map<String, String> userMetadata = new HashMap<>();
-        userMetadata.put("userKey1", "userValue1");
-        userMetadata.put("userKey2", "userValue2");
-        metadata.setUserMetadata(userMetadata);
-        metadata.setSSEAlgorithm("testAlgorithm");
-        when(metadata.getETag()).thenReturn("test-etag");
-        s3ObjectResponse.setObjectMetadata(metadata);
-        when(mockS3Client.getObject(Mockito.any())).thenReturn(s3ObjectResponse);
+        Instant expirationTime = Instant.now().truncatedTo(ChronoUnit.SECONDS);
+        String expirationTimeRfc1123 = DateTimeFormatter.RFC_1123_DATE_TIME.format(ZonedDateTime.ofInstant(expirationTime, ZoneOffset.UTC));
+
+        GetObjectResponse response = GetObjectResponse.builder()
+                .eTag("test-etag")
+                .contentLength(12L)
+                .contentDisposition("key/path/to/file.txt")
+                .contentType("text/plain")
+                .checksumCRC32("testCRC32hash")
+                .expiration(String.format("expiry-date=\"%s\", rule-id=\"%s\"", expirationTimeRfc1123, "testExpirationRuleId"))
+                .serverSideEncryption(ServerSideEncryption.AES256)
+                .metadata(Map.of("userKey1", "userValue1", "userKey2", "userValue2"))
+                .build();
+
+        ResponseInputStream<GetObjectResponse> responseStream = new ResponseInputStream<>(response, AbortableInputStream.create(new StringInputStream("Some Content")));
+        when(mockS3Client.getObject(Mockito.any(GetObjectRequest.class))).thenReturn(responseStream);
 
         runner.run(1);
 
         ArgumentCaptor<GetObjectRequest> captureRequest = ArgumentCaptor.forClass(GetObjectRequest.class);
         Mockito.verify(mockS3Client, Mockito.times(1)).getObject(captureRequest.capture());
         GetObjectRequest request = captureRequest.getValue();
-        assertEquals("request-bucket", request.getBucketName());
-        assertEquals("request-key", request.getKey());
-        assertTrue(request.isRequesterPays());
-        assertNull(request.getVersionId());
+        assertEquals("test-bucket", request.bucket());
+        assertEquals("test-key", request.key());
+        assertEquals(RequestPayer.REQUESTER, request.requestPayer());
+        assertNull(request.versionId());
 
         runner.assertAllFlowFilesTransferred(FetchS3Object.REL_SUCCESS, 1);
         final List<MockFlowFile> ffs = runner.getFlowFilesForRelationship(FetchS3Object.REL_SUCCESS);
         MockFlowFile ff = ffs.get(0);
-        ff.assertAttributeEquals("s3.bucket", "response-bucket-name");
+        ff.assertAttributeEquals("s3.bucket", "test-bucket");
         ff.assertAttributeEquals(CoreAttributes.FILENAME.key(), "file.txt");
         ff.assertAttributeEquals(CoreAttributes.PATH.key(), "key/path/to");
         ff.assertAttributeEquals(CoreAttributes.ABSOLUTE_PATH.key(), "key/path/to/file.txt");
         ff.assertAttributeEquals(CoreAttributes.MIME_TYPE.key(), "text/plain");
-        ff.assertAttributeEquals("hash.value", "testMD5hash");
-        ff.assertAttributeEquals("hash.algorithm", "MD5");
+        ff.assertAttributeEquals("hash.value", "testCRC32hash");
+        ff.assertAttributeEquals("hash.algorithm", "CRC32");
         ff.assertAttributeEquals("s3.etag", "test-etag");
-        ff.assertAttributeEquals("s3.expirationTime", String.valueOf(expiration.getTime()));
+        ff.assertAttributeEquals("s3.expirationTime", String.valueOf(expirationTime.toEpochMilli()));
         ff.assertAttributeEquals("s3.expirationTimeRuleId", "testExpirationRuleId");
         ff.assertAttributeEquals("userKey1", "userValue1");
         ff.assertAttributeEquals("userKey2", "userValue2");
-        ff.assertAttributeEquals("s3.sseAlgorithm", "testAlgorithm");
+        ff.assertAttributeEquals("s3.sseAlgorithm", "AES256");
         ff.assertContentEquals("Some Content");
     }
 
     @Test
-    public void testGetObjectVersion() throws IOException {
-        runner.setProperty(RegionUtilV1.S3_REGION, "us-east-1");
-        runner.setProperty(FetchS3Object.BUCKET_WITHOUT_DEFAULT_VALUE, "request-bucket");
+    public void testGetObjectVersion() {
+        runner.setProperty(RegionUtil.REGION, "us-east-1");
+        runner.setProperty(FetchS3Object.BUCKET_WITHOUT_DEFAULT_VALUE, "test-bucket");
         runner.setProperty(FetchS3Object.VERSION_ID, "${s3.version}");
         final Map<String, String> attrs = new HashMap<>();
-        attrs.put("filename", "request-key");
-        attrs.put("s3.version", "request-version");
+        attrs.put("filename", "test-key");
+        attrs.put("s3.version", "test-version");
         runner.enqueue(new byte[0], attrs);
 
-        S3Object s3ObjectResponse = new S3Object();
-        s3ObjectResponse.setBucketName("response-bucket-name");
-        s3ObjectResponse.setObjectContent(new StringInputStream("Some Content"));
-        ObjectMetadata metadata = Mockito.spy(ObjectMetadata.class);
-        metadata.setContentDisposition("key/path/to/file.txt");
-        when(metadata.getVersionId()).thenReturn("response-version");
-        s3ObjectResponse.setObjectMetadata(metadata);
-        when(mockS3Client.getObject(Mockito.any())).thenReturn(s3ObjectResponse);
+        GetObjectResponse response = GetObjectResponse.builder()
+                .versionId("test-version")
+                .eTag("test-etag")
+                .contentLength(12L)
+                .contentDisposition("key/path/to/file.txt")
+                .build();
+
+        ResponseInputStream<GetObjectResponse> responseStream = new ResponseInputStream<>(response, AbortableInputStream.create(new StringInputStream("Some Content")));
+        when(mockS3Client.getObject(Mockito.any(GetObjectRequest.class))).thenReturn(responseStream);
 
         runner.run(1);
 
         ArgumentCaptor<GetObjectRequest> captureRequest = ArgumentCaptor.forClass(GetObjectRequest.class);
         Mockito.verify(mockS3Client, Mockito.times(1)).getObject(captureRequest.capture());
         GetObjectRequest request = captureRequest.getValue();
-        assertEquals("request-bucket", request.getBucketName());
-        assertEquals("request-key", request.getKey());
-        assertEquals("request-version", request.getVersionId());
+        assertEquals("test-bucket", request.bucket());
+        assertEquals("test-key", request.key());
+        assertEquals("test-version", request.versionId());
 
         runner.assertAllFlowFilesTransferred(FetchS3Object.REL_SUCCESS, 1);
         final List<MockFlowFile> ffs = runner.getFlowFilesForRelationship(FetchS3Object.REL_SUCCESS);
         MockFlowFile ff = ffs.get(0);
-        ff.assertAttributeEquals("s3.bucket", "response-bucket-name");
+        ff.assertAttributeEquals("s3.bucket", "test-bucket");
         ff.assertAttributeEquals(CoreAttributes.FILENAME.key(), "file.txt");
         ff.assertAttributeEquals(CoreAttributes.PATH.key(), "key/path/to");
         ff.assertAttributeEquals(CoreAttributes.ABSOLUTE_PATH.key(), "key/path/to/file.txt");
-        ff.assertAttributeEquals("s3.version", "response-version");
+        ff.assertAttributeEquals("s3.version", "test-version");
         ff.assertContentEquals("Some Content");
     }
 
 
     @Test
     public void testGetObjectExceptionGoesToFailure() {
-        runner.setProperty(RegionUtilV1.S3_REGION, "us-east-1");
+        runner.setProperty(RegionUtil.REGION, "us-east-1");
         runner.setProperty(FetchS3Object.BUCKET_WITHOUT_DEFAULT_VALUE, "request-bucket");
         final Map<String, String> attrs = new HashMap<>();
         attrs.put("filename", "request-key");
         runner.enqueue(new byte[0], attrs);
-        Mockito.doThrow(new AmazonS3Exception("NoSuchBucket")).when(mockS3Client).getObject(Mockito.any());
+        Mockito.doThrow(S3Exception.builder().message("NoSuchBucket").build()).when(mockS3Client).getObject(Mockito.any(GetObjectRequest.class));
 
         runner.run(1);
 
@@ -261,67 +264,58 @@ public class TestFetchS3Object {
 
     @Test
     public void testFetchObject_FailAdditionalAttributesBucketName() {
-        runner.setProperty(RegionUtilV1.S3_REGION, "us-east-1");
+        runner.setProperty(RegionUtil.REGION, "us-east-1");
         runner.setProperty(FetchS3Object.BUCKET_WITHOUT_DEFAULT_VALUE, "request-bucket-bad-name");
         final Map<String, String> attrs = new HashMap<>();
         attrs.put("filename", "request-key");
         runner.enqueue(new byte[0], attrs);
 
-        final AmazonS3Exception exception = new AmazonS3Exception("The specified bucket does not exist");
-
-        final Map<String, String> details = new LinkedHashMap<>();
-        details.put("BucketName", "us-east-1");
-        details.put("Error", "ABC123");
-
-        exception.setAdditionalDetails(details);
-        exception.setErrorCode("NoSuchBucket");
-        exception.setStatusCode(HttpURLConnection.HTTP_NOT_FOUND);
-        Mockito.doThrow(exception).when(mockS3Client).getObject(Mockito.any());
+        final AwsServiceException exception = buildS3Exception(HttpURLConnection.HTTP_NOT_FOUND, "NoSuchBucket", "The specified bucket does not exist",
+                Map.of("BucketName", List.of("us-east-1"), "Error", List.of("ABC123")));
+        Mockito.doThrow(exception).when(mockS3Client).getObject(Mockito.any(GetObjectRequest.class));
         runner.run(1);
 
         final List<MockFlowFile> flowFiles = runner.getFlowFilesForRelationship(FetchS3Object.REL_FAILURE);
         assertEquals(1, flowFiles.size());
         final MockFlowFile flowFile = flowFiles.iterator().next();
         assertEquals("NoSuchBucket", flowFile.getAttribute("s3.errorCode"));
-        assertTrue(exception.getMessage().startsWith(flowFile.getAttribute("s3.errorMessage")));
+        assertEquals("The specified bucket does not exist", flowFile.getAttribute("s3.errorMessage"));
         assertEquals("404", flowFile.getAttribute("s3.statusCode"));
         assertEquals(exception.getClass().getName(), flowFile.getAttribute("s3.exception"));
     }
 
     @Test
     public void testFetchObject_FailAdditionalAttributesAuthentication() {
-        runner.setProperty(RegionUtilV1.S3_REGION, "us-east-1");
+        runner.setProperty(RegionUtil.REGION, "us-east-1");
         runner.setProperty(FetchS3Object.BUCKET_WITHOUT_DEFAULT_VALUE, "request-bucket-bad-name");
         final Map<String, String> attrs = new HashMap<>();
         attrs.put("filename", "request-key");
         runner.enqueue(new byte[0], attrs);
 
-        final AmazonS3Exception exception = new AmazonS3Exception("signature");
-        exception.setAdditionalDetails(Collections.singletonMap("CanonicalRequestBytes", "AA BB CC DD EE FF"));
-        exception.setErrorCode("SignatureDoesNotMatch");
-        exception.setStatusCode(HttpURLConnection.HTTP_FORBIDDEN);
-        Mockito.doThrow(exception).when(mockS3Client).getObject(Mockito.any());
+        final AwsServiceException exception = buildS3Exception(HttpURLConnection.HTTP_FORBIDDEN, "SignatureDoesNotMatch", "signature",
+                Map.of("CanonicalRequestBytes", List.of("AA BB CC DD EE FF")));
+        Mockito.doThrow(exception).when(mockS3Client).getObject(Mockito.any(GetObjectRequest.class));
         runner.run(1);
 
         final List<MockFlowFile> flowFiles = runner.getFlowFilesForRelationship(FetchS3Object.REL_FAILURE);
         assertEquals(1, flowFiles.size());
         final MockFlowFile flowFile = flowFiles.iterator().next();
         assertEquals("SignatureDoesNotMatch", flowFile.getAttribute("s3.errorCode"));
-        assertTrue(exception.getMessage().startsWith(flowFile.getAttribute("s3.errorMessage")));
+        assertEquals("signature", flowFile.getAttribute("s3.errorMessage"));
         assertEquals("403", flowFile.getAttribute("s3.statusCode"));
         assertEquals(exception.getClass().getName(), flowFile.getAttribute("s3.exception"));
     }
 
     @Test
     public void testFetchObject_FailAdditionalAttributesNetworkFailure() {
-        runner.setProperty(RegionUtilV1.S3_REGION, "us-east-1");
+        runner.setProperty(RegionUtil.REGION, "us-east-1");
         runner.setProperty(FetchS3Object.BUCKET_WITHOUT_DEFAULT_VALUE, "request-bucket-bad-name");
         final Map<String, String> attrs = new HashMap<>();
         attrs.put("filename", "request-key");
         runner.enqueue(new byte[0], attrs);
 
-        final SdkClientException exception = new SdkClientException("message");
-        Mockito.doThrow(exception).when(mockS3Client).getObject(Mockito.any());
+        final SdkClientException exception = SdkClientException.builder().message("message").build();
+        Mockito.doThrow(exception).when(mockS3Client).getObject(Mockito.any(GetObjectRequest.class));
         runner.run(1);
 
         final List<MockFlowFile> flowFiles = runner.getFlowFilesForRelationship(FetchS3Object.REL_FAILURE);
@@ -332,12 +326,12 @@ public class TestFetchS3Object {
 
     @Test
     public void testGetObjectReturnsNull() {
-        runner.setProperty(RegionUtilV1.S3_REGION, "us-east-1");
+        runner.setProperty(RegionUtil.REGION, "us-east-1");
         runner.setProperty(FetchS3Object.BUCKET_WITHOUT_DEFAULT_VALUE, "request-bucket");
         final Map<String, String> attrs = new HashMap<>();
         attrs.put("filename", "request-key");
         runner.enqueue(new byte[0], attrs);
-        when(mockS3Client.getObject(Mockito.any())).thenReturn(null);
+        when(mockS3Client.getObject(Mockito.any(GetObjectRequest.class))).thenReturn(null);
 
         runner.run(1);
 
@@ -346,14 +340,14 @@ public class TestFetchS3Object {
 
     @Test
     public void testFlowFileAccessExceptionGoesToFailure() {
-        runner.setProperty(RegionUtilV1.S3_REGION, "us-east-1");
+        runner.setProperty(RegionUtil.REGION, "us-east-1");
         runner.setProperty(FetchS3Object.BUCKET_WITHOUT_DEFAULT_VALUE, "request-bucket");
         final Map<String, String> attrs = new HashMap<>();
         attrs.put("filename", "request-key");
         runner.enqueue(new byte[0], attrs);
 
-        AmazonS3Exception amazonException = new AmazonS3Exception("testing");
-        Mockito.doThrow(new FlowFileAccessException("testing nested", amazonException)).when(mockS3Client).getObject(Mockito.any());
+        AwsServiceException amazonException = S3Exception.builder().message("testing").build();
+        Mockito.doThrow(new FlowFileAccessException("testing nested", amazonException)).when(mockS3Client).getObject(Mockito.any(GetObjectRequest.class));
 
         runner.run(1);
 
@@ -365,13 +359,25 @@ public class TestFetchS3Object {
         final PropertyMigrationResult propertyMigrationResult = runner.migrateProperties();
         final Map<String, String> expectedRenamed =
                 Map.of("encryption-service", AbstractS3Processor.ENCRYPTION_SERVICE.getName(),
-                        "custom-signer-class-name", AbstractS3Processor.S3_CUSTOM_SIGNER_CLASS_NAME.getName(),
-                        "custom-signer-module-location", AbstractS3Processor.S3_CUSTOM_SIGNER_MODULE_LOCATION.getName(),
                         "requester-pays", FetchS3Object.REQUESTER_PAYS.getName(),
                         "range-start", FetchS3Object.RANGE_START.getName(),
                         "range-length", FetchS3Object.RANGE_LENGTH.getName());
 
         expectedRenamed.forEach((key, value) -> assertEquals(value, propertyMigrationResult.getPropertiesRenamed().get(key)));
+    }
+
+    private AwsServiceException buildS3Exception(int statusCode, String errorCode, String errorMessage, Map<String, List<String>> headers) {
+        return S3Exception.builder()
+                .statusCode(statusCode)
+                .awsErrorDetails(AwsErrorDetails.builder()
+                        .errorCode(errorCode)
+                        .errorMessage(errorMessage)
+                        .sdkHttpResponse(SdkHttpResponse.builder()
+                                .headers(headers)
+                                .build())
+                        .build())
+                .build();
+
     }
 
 }
